<resources>
    <string name="app_name">CroSOS</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="country">Country</string>
    <string name="gender">Biological gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="blood_type">Blood type</string>
    <string name="blood_typeA">A</string>
    <string name="blood_typeB">B</string>
    <string name="blood_typeAB">AB</string>
    <string name="blood_type0" translatable="false">0</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="unknown">Unknown</string>
    <string name="rh_factor">Rh-factor</string>
    <string name="medical_conditions">Medical conditions</string>
    <string name="medical_conditions_hint">Current medical conditions that emergency services need to know</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="allergies">Allergies</string>
    <string name="save">Save</string>
    <string name="none_first_name_msg">Enter first name</string>
    <string name="none_last_name_msg">Enter last name</string>
    <string name="failed_create_person_msg">Failed to add {0} {1}</string>
    <string name="successfully_create_person_msg">Successfully added {0} {1}</string>
    <string name="failed_update_person_msg">Failed to update {0} {1}</string>
    <string name="successfully_update_person_msg">Successfully updated {0} {1}</string>
    <string name="successfully_delete_person_msg">Successfully deleted person</string>
    <string name="successfully_delete_persons_msg">Successfully deleted all persons</string>
    <string name="failed_delete_person_msg">Eliminate tutte le persone con successo</string>
    <string name="failed_delete_persons_msg">Failed to delete all persons</string>
    <string name="title_activity_maps">CroSOSs</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_user">Delete person</string>
    <string name="delete_persons">Delete all persons</string>
    <string name="delete_user_question">Are sure you want to delete the person?</string>
    <string name="delete_persons_question">Are you sure you want to delete all persons?</string>
    <string name="delete_user_no">Person is not deleted</string>
    <string name="delete_persons_no">All persons are not deleted</string>
    <string name="add_person">Add person</string>
    <string name="none_country">None</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="emergency_number_msg">Message emergency telephone number</string>
    <string name="ambulance_call">Call ambulance</string>
    <string name="police_call">Call police</string>
    <string name="firefighters_call">Call firefighters</string>
    <string name="consulate_call">Call consulate</string>
    <string name="emergency_number_call">Call emergency telephone number</string>
    <string name="sms_sent">SMS sent</string>

</resources>